refactor(service): adapt service layer to work with JPA persistence context