@@ -4,8 +4,9 @@ import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
 import com.sprint.mission.discodeit.dto.request.MessageCreateRequest;
 import com.sprint.mission.discodeit.dto.request.MessageUpdateRequest;
 import com.sprint.mission.discodeit.entity.BinaryContent;
+import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.Message;
-import com.sprint.mission.discodeit.repository.BinaryContentRepository;
+import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
@@ -13,20 +14,20 @@ import com.sprint.mission.discodeit.service.MessageService;
 import com.sprint.mission.discodeit.exception.CustomException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
+@Transactional
 public class BasicMessageService implements MessageService {
 
   private final MessageRepository messageRepository;
-  //
   private final ChannelRepository channelRepository;
   private final UserRepository userRepository;
-  private final BinaryContentRepository binaryContentRepository;
 
   @Override
   public Message create(MessageCreateRequest messageCreateRequest,
@@ -34,36 +35,50 @@ public class BasicMessageService implements MessageService {
     UUID channelId = messageCreateRequest.channelId();
     UUID authorId = messageCreateRequest.authorId();
 
-    if (!channelRepository.existsById(channelId)) {
-      throw new CustomException.ChannelNotFoundException("Channel with id " + channelId + " does not exist");
-    }
-    if (!userRepository.existsById(authorId)) {
-      throw new CustomException.UserNotFoundException("Author with id " + authorId + " does not exist");
-    }
+    Channel channel = channelRepository.findById(channelId)
+        .orElseThrow(
+            () -> new CustomException.ChannelNotFoundException("Channel with id " + channelId + " does not exist"));
 
-    List<UUID> attachmentIds = binaryContentCreateRequests.stream()
+    User author = userRepository.findById(authorId)
+        .orElseThrow(() -> new CustomException.UserNotFoundException("Author with id " + authorId + " does not exist"));
+
+    // 첨부파일이 있는 경우 - BinaryContent 리스트 생성 후 첨부파일 포함 생성자 사용
+    List<BinaryContent> attachments = binaryContentCreateRequests.stream()
         .map(attachmentRequest -> {
           String fileName = attachmentRequest.fileName();
           String contentType = attachmentRequest.contentType();
           byte[] bytes = attachmentRequest.bytes();
-
-          BinaryContent binaryContent = new BinaryContent(fileName, (long) bytes.length,
-              contentType, bytes);
-          BinaryContent createdBinaryContent = binaryContentRepository.save(binaryContent);
-          return createdBinaryContent.getId();
+          return new BinaryContent(fileName, (long) bytes.length, contentType, bytes);
         })
-        .toList();
+        .collect(Collectors.toList());
 
     String content = messageCreateRequest.content();
-    Message message = new Message(
-        content,
-        channelId,
-        authorId,
-        attachmentIds);
+    Message message = new Message(content, channel, author, attachments);
+
     return messageRepository.save(message);
   }
 
   @Override
+  public Message create(MessageCreateRequest messageCreateRequest) {
+    UUID channelId = messageCreateRequest.channelId();
+    UUID authorId = messageCreateRequest.authorId();
+
+    Channel channel = channelRepository.findById(channelId)
+        .orElseThrow(
+            () -> new CustomException.ChannelNotFoundException("Channel with id " + channelId + " does not exist"));
+
+    User author = userRepository.findById(authorId)
+        .orElseThrow(() -> new CustomException.UserNotFoundException("Author with id " + authorId + " does not exist"));
+
+    // 첨부파일이 없는 경우
+    String content = messageCreateRequest.content();
+    Message message = new Message(content, channel, author);
+
+    return messageRepository.save(message);
+  }
+
+  @Override
+  @Transactional(readOnly = true)
   public Message find(UUID messageId) {
     return messageRepository.findById(messageId)
         .orElseThrow(
@@ -71,30 +86,30 @@ public class BasicMessageService implements MessageService {
   }
 
   @Override
+  @Transactional(readOnly = true)
   public List<Message> findAllByChannelId(UUID channelId) {
-    return messageRepository.findAllByChannelId(channelId).stream()
-        .toList();
+    return messageRepository.findAllByChannelId(channelId);
   }
 
   @Override
   public Message update(UUID messageId, MessageUpdateRequest request) {
     String newContent = request.newContent();
+
     Message message = messageRepository.findById(messageId)
         .orElseThrow(
-            () -> new NoSuchElementException("Message with id " + messageId + " not found"));
+            () -> new CustomException.MessageNotFoundException("Message with id " + messageId + " not found"));
+
     message.update(newContent);
-    return messageRepository.save(message);
+
+    return message;
   }
 
   @Override
   public void delete(UUID messageId) {
     Message message = messageRepository.findById(messageId)
         .orElseThrow(
-            () -> new NoSuchElementException("Message with id " + messageId + " not found"));
+            () -> new CustomException.MessageNotFoundException("Message with id " + messageId + " not found"));
 
-    message.getAttachmentIds()
-        .forEach(binaryContentRepository::deleteById);
-
-    messageRepository.deleteById(messageId);
+    messageRepository.delete(message);
   }
 }
